<resources>
    <string name="app_name">Resume Maker</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="craft_your_success_story">Craft Your Success Story</string>
    <string name="skip">Skip</string>
    <string name="subscription_info">This subscription gives you unlimited access to our app content library. You will be charged for respective subscription until you cancel  <font color='#9e9e9e'><b><a href='https://www.pentabitapps.com/terms-of-use'>Terms &amp; conditions</a></b></font></string>
    <string name="welcome_to_your_shortcut_for_standout_resumes_and_cover_letters">Welcome to your shortcut for standout resumes and cover letters.</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activty">MainActivty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Resume Maker</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="trial_period">3-Days Free Trial</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="rate_us">Rate Us</string>
    <string name="menu_more_app">More Apps</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_privacy_nav">Privacy\n Policy</string>
    <string name="menu_restore">Restore Purchases</string>
    <string name="menu_restore_nav">Restore\n Purchases</string>
    <string name="menu_share">Share App</string>
    <string name="menu_term">Terms of Use</string>
    <string name="menu_delete">Delete Account</string>
    <string name="pro_text"><![CDATA["You'll get a smooth ad-free experience, our devs will get their morning coffee it's a win-win deal! 🤝 "]]></string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="version_2_7">Version 2.4.1</string>
    <string name="add_more_sections">Add More Sections</string>
    <string name="interest">Interest</string>
    <string name="language">Language</string>
    <string name="project">Projects</string>
    <string name="achievment">Achievements</string>
    <string name="view_all">View All</string>
    <string name="samples">Samples</string>
    <string name="back">Back</string>
    <string name="objectives">Objectives</string>
    <string name="add_education">Add Education</string>
    <string name="institue_name">Institue Name</string>
    <string name="degree">Degree</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="currently_enrolled">Currently Enrolled</string>
    <string name="save">Save</string>
    <string name="add_skill">Add Skill</string>
    <string name="skill">Skills</string>
    <string name="add_experience">Add Experience</string>
    <string name="add_referrence">Add Referrence</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="description">Description</string>
    <string name="i_am_currently_working_in_this_role">I am currently working in this role</string>
    <string name="reference_name">Reference Name</string>
    <string name="add_language">Add Language</string>
    <string name="add_project">Add Project</string>
    <string name="add_achievement">Add Achievement</string>
    <string name="download">Download</string>
    <string name="experience">Experience</string>
    <string name="certificate">Certificate</string>
    <string name="select_sample">Select Sample</string>
    <string name="cover_letter">Cover Letter</string>
    <string name="sample_detail_text">Dear HR Manager,\n I am writing to apply for the position of Senior FullStack Engineer (Backend/Mobile) - (Data Platform) at Delivery Hero, as advertised. I have three years of experience working at Vodafone Egypt, and I believe I possess the necessary skills, knowledge and experience for the role. I have 4+ years of experience working with mobile programming languages for Android or iOS (Kotlin or Swift), as well as 5+ years of experience in developing complex software systems scaling to millions of users. I am comfortable working in an environment where I can experiment and iterate quickly, and have the ability to understand business drivers and strategic needs for features. I am passionate about secure, clean and beautiful code, and have strong customer empathy and experience sensitivity. I am confident that I would make a great addition to your team, and I am excited at the prospect of working with you. I look forward to discussing this opportunity further. Sincerely, Ahmed</string>
    <string name="job_description">Job Description</string>
    <string name="short_text">Short</string>
    <string name="long_text">Long</string>
    <string name="medium_text">Medium</string>
    <string name="logout_msg">Are you sure you want to logout of your account?</string>
    <string name="sharing_your_experience_helps_us_grow">Sharing your experience helps us grow.</string>
    <string name="are_you_enjoying_our_app">Are You Enjoying Our App?</string>
    <string name="upgrade_now_for_uninterrupted_smoother_and_a_cleaner_app_experience">Upgrade now for uninterrupted, smoother and a cleaner app experience.</string>
    <string name="remove_ads_now">Remove Ads Now</string>
    <string name="purchase">purchase</string>
    <string name="download_as_jpg">Download as JPG</string>
    <string name="download_as_pdf">Download as PDF</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="enter_the_link_to_your_linkedin_profile_resume_maker_will_import_it_and_turn_it_into_a_resume">Enter the link to your LinkedIn profile. Resume Maker will import it and turn it into a resume.</string>
    <string name="downloads">Downloads</string>
    <string name="interests">Interests</string>
    <string name="view_less">View Less</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="some_permission_denied">Few permissions were denied. Please note they will be required later</string>
    <string name="allow_permissions_manually">Please manually allow necessary permissions through Settings</string>
    <string name="detail_reason_for_to_access_read_write_permission">This permission is required to save your created images/videos in the gallery for sharing and edit any that are accessible through the app. The app is fully tested to comply with data privacy policies and ensure no data infringement</string>
    <string name="purchase1">Get Remove Ads to free yourself from interruptions.</string>
    <string name="purchase2">1. Create resumes and cover letters\n \t\twithout any disturbances.</string>
    <string name="purchase3">2. Access all the resume and cover letter\n \t\t templates without watching any ads.</string>
    <string name="delete_account">Are you sure you want to delete of your account?</string>
    <string name="field_missing_error">please complete all missing fields</string>
    <string name="single_field_missing_error">please complete the field</string>
    <string name="add_interest">Add Interest</string>
    <string name="add_detail">Add Detail</string>
    <string name="choose_templates">Choose Template</string>
    <string name="profile">My Profiles</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="preview">Preview</string>
    <string name="cover_letter_missing_field">Please write CoverLetter</string>
    <string name="user_profile">User Profile</string>
    <string name="editcover">Edit CoverLetter</string>
    <string name="resume">Resume</string>
    <string name="purchase_header">Let nobody come between\n you and your next job.</string>
    <string name="login">Login</string>
    <string name="ok_text">ok</string>
    <string name="cancel">cancel</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="jpg">JPG</string>
    <string name="pdf">PDF</string>
    <string name="share_txt">Share</string>
    <string name="done">Done</string>
    <string name="retry">Retry</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="pro_subscription_restored_successfully">Pro subscription restored successfully</string>
</resources>