<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rate_us"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/rate"
            android:title="@string/menu_more_app" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/more"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_retore"
            android:icon="@drawable/restore"
            android:title="@string/menu_restore" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_term"
            android:icon="@drawable/privacy"
            android:title="@string/menu_term" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/delete"
            android:title="@string/menu_delete" />

    </group>
</menu>