<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.addDetailResume.AddEducation">
    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        layout="@layout/toolbars"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/include_tool"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instituate_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_tool"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/instituenameedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/institue_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/degree_textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instituate_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/degree_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/degree" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startdate_textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"

        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degree_textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startdateedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enddate_textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"

        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startdate_textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enddateedittext"
            android:hint="@string/end_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/check_itscontinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/enddate_textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/enddate_textInputLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currently_enrolled"
        app:layout_constraintBottom_toBottomOf="@+id/check_itscontinue"
        app:layout_constraintStart_toEndOf="@+id/check_itscontinue"
        app:layout_constraintTop_toTopOf="@+id/check_itscontinue" />

    <TextView
        android:id="@+id/savebtn"
        style="@style/button_style_round"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>