<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <include
        android:id="@+id/include_tool"
        layout="@layout/toolbars"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/banner_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_tool" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jobtitle_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner_add">

        <AutoCompleteTextView
            android:id="@+id/job_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/job_title"
            android:paddingStart="13dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/companyName_textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/_10sdp"
        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobtitle_textInputLayout">

        <AutoCompleteTextView
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/company_name"
            android:paddingStart="13dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:layout_margin="@dimen/_10sdp"
        app:boxStrokeColor="@color/green_light"
        app:endIconMode="custom"
        app:endIconTint="@null"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyName_textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_65sdp"
            android:gravity="top"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startdate_textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"

        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startdateedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/start_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enddate_textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"

        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startdate_textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enddateedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/end_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/check_itscontinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"

        app:layout_constraintStart_toStartOf="@+id/enddate_textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/enddate_textInputLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_currently_working_in_this_role"
        app:layout_constraintBottom_toBottomOf="@+id/check_itscontinue"
        app:layout_constraintStart_toEndOf="@+id/check_itscontinue"
        app:layout_constraintTop_toTopOf="@+id/check_itscontinue" />

    <TextView
        android:id="@+id/savebtn"
        style="@style/button_style_round"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>