<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        layout="@layout/toolbars"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/include_tool"/>

    <TextView
        android:id="@+id/select_samplebtn"
        style="@style/button_style_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/purplebtncircular"
        android:backgroundTint="@color/purple"
        android:text="@string/select_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_tool" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/coverletter_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_7sdp"
        app:endIconTint="@null"
        app:endIconMode="custom"
        app:boxStrokeColor="@color/green_light"
        app:hintTextColor="@color/green_light"
        app:layout_constraintBottom_toTopOf="@+id/nextbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_samplebtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coverletter_textInput"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:hint="@string/cover_letter" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nextbtn"
        style="@style/button_style_round"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>