<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.addDetailResume.EducationFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_education"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/addeducationbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addeducationbtn"
        style="@style/subheading"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/purple"
        android:textSize="@dimen/_10ssp"
        android:drawableLeft="@drawable/baseline_add_24"
        android:gravity="end|center"
        android:text="@string/add_education"
        android:textColor="@color/white"
        app:circularflow_defaultRadius="@dimen/_20sdp"
        app:cornerRadius="@dimen/_55sdp"
        app:layout_constraintBottom_toTopOf="@+id/nextbtn"
        app:layout_constraintEnd_toEndOf="@+id/nextbtn"
        app:shapeAppearance="@style/CircularFloating" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextbtn"
        style="@style/subheading"
        android:layout_width="@dimen/_185sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/green_light"
        android:drawableEnd="@drawable/next"
        android:gravity="start|center"
        android:text="@string/next"
        android:textColor="@color/white"
        app:circularflow_defaultRadius="@dimen/_20sdp"
        app:cornerRadius="@dimen/_55sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backbtn"
        app:shapeAppearance="@style/CircularFloating" />

    <TextView
        android:id="@+id/backbtn"
        style="@style/regular"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/circularbg"
        android:backgroundTint="@color/grey_dim"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/back"
        android:textSize="@dimen/_12ssp"

        app:layout_constraintBottom_toBottomOf="@+id/nextbtn"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_education"
        app:layout_constraintTop_toTopOf="@+id/nextbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>

